--- a/SfdcOpps.html
+++ b/SfdcOpps.html
@@ -1,10 +1,10 @@
 <apex:page showHeader="true" sidebar="false">
+   <apex:includeScript value="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js" />
+   <apex:includeScript value="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.10/angular.min.js"/>
+   <apex:includeScript value="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.10/angular-route.min.js"/>   
+   <apex:includeScript value="{!$Resource.jsForce}" />
    <html xmlns:ng="http://angularjs.org" lang="en" ng-app="sfdcApp">
       <head>
-         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
-         <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.10/angular.min.js"></script>
-          <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.10/angular-route.min.js"></script>
-          <script src="//cdnjs.cloudflare.com/ajax/libs/jsforce/1.4.1/jsforce.min.js"></script>
          <!--link href="https://netdna.bootstrapcdn.com/twitter-bootstrap/2.1.1/css/bootstrap.no-icons.min.css" rel="stylesheet"/-->
          <link href="https://netdna.bootstrapcdn.com/font-awesome/2.0/css/font-awesome.css" rel="stylesheet"/>
          <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" />
